# ai-implementations

./: .gitignore  README.md  pyproject.toml
alexnet/: README.md  model.py  train.py
rnn/: __main__.py
