[tool.poetry]
name = "ai_implementations"
version = "0.0.0"
description = "Learning through building"
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
